--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+
 </head>
 <body>
 <!---->
@@ -21,29 +23,161 @@
 <!--formulario que crea la consulta-->
 <div>
     <form>
-        <label>Busqueda
-            <input type="text"/>
-        </label>
-        <button>Buscar</button>
+        <label for="searchbox">Buscar cliente<br>
+            <legend><small>Usted aquí puede buscar su Ticket con el número provisto por la companía o también puede buscarse con su número de móvil.</small></legend>        </label>
 
+        <input type="search" id="searchbox" placeholder="Buscar por Numero o ID del Ticket"/>
     </form>
 </div>
 
 <!--muestra el resultado-->
-<div >
-    <div style="display: flex; gap: 15px" id="query_results_field">
-        id
-    </div>
-    <div class="api-result-rows" style="display: flex; flex-direction: column" id="query_results_rows"/>
+<div class="table-wrapper">
+    <small>Resultados de la búsqueda "<span id="inputIngresado"></span>"</small>
+    <table class="fl-table">
+        <thead>
+        <tr class="api-result-fields" id="query_results_field">
+            <th>id</th>
+        </tr>
+        </thead>
+
+        <tbody class="api-result-rows" id="query_results_rows"><td class="is-hidden">secret</td></tbody>
+    </table>
 </div>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="index.js"></script>
 </body>
 <style>
-    .api-result-rows > div {
-        display: flex;
-        gap: 15px;
+    .is-hidden { display: none!important; }
+    *{
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
     }
+    body {
+        font-family: Helvetica,serif;
+        -webkit-font-smoothing: antialiased;
+    }
+    form {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        gap: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    form > * {
+        margin-inline: auto;
+    }
+
+    input[type=text] {
+        width: 230px;
+        -webkit-transition: width 0.4s ease-in-out;
+        transition: width 0.4s ease-in-out;
+    }
+
+    /* When the input field gets focus, change its width to 100% */
+    input[type=text]:focus {
+        width: 310px;
+    }
+    .fl-table {
+        border-radius: 5px;
+        /*font-size: 12px;*/
+        font-weight: normal;
+        border: none;
+        border-collapse: collapse;
+        width: 100%;
+        max-width: 100%;
+        white-space: nowrap;
+        background-color: white;
+    }
+    .fl-table td, .fl-table th {
+        text-align: center;
+        padding: 8px;
+    }
+    .fl-table td {
+        border-right: 1px solid #f8f8f8;
+        font-size: 14px;
+    }
+
+    .fl-table thead th {
+        color: #ffffff;
+        background: #4FC3A1;
+    }
+
+
+    .fl-table thead th:nth-child(odd) {
+        color: #ffffff;
+        background: #324960;
+    }
+
+    .fl-table tr:nth-child(even) {
+        background: #F8F8F8;
+    }
+    @media (max-width: 767px) {
+        .fl-table {
+            display: block;
+            width: 100%;
+        }
+        .table-wrapper:before{
+            content: "Scroll horizontally >";
+            display: block;
+            text-align: right;
+            font-size: 11px;
+            color: white;
+            padding: 0 0 10px;
+        }
+        .fl-table thead, .fl-table tbody, .fl-table thead th {
+            display: block;
+        }
+        .fl-table thead th:last-child{
+            border-bottom: none;
+        }
+        .fl-table thead {
+            float: left;
+        }
+        .fl-table tbody {
+            width: auto;
+            position: relative;
+            overflow-x: auto;
+        }
+        .fl-table td, .fl-table th {
+            padding: 20px .625em .625em .625em;
+            height: 60px;
+            vertical-align: middle;
+            box-sizing: border-box;
+            overflow-x: hidden;
+            overflow-y: auto;
+            width: 120px;
+            font-size: 13px;
+            text-overflow: ellipsis;
+        }
+        .fl-table thead th {
+            text-align: left;
+            border-bottom: 1px solid #f7f7f9;
+        }
+        .fl-table tbody tr {
+            display: table-cell;
+        }
+        .fl-table tbody tr:nth-child(odd) {
+            background: none;
+        }
+        .fl-table tr:nth-child(even) {
+            background: transparent;
+        }
+        .fl-table tr td:nth-child(odd) {
+            background: #F8F8F8;
+            border-right: 1px solid #E6E4E4;
+        }
+        .fl-table tr td:nth-child(even) {
+            border-right: 1px solid #E6E4E4;
+        }
+        .fl-table tbody td {
+            display: block;
+            text-align: center;
+        }
+    }
+
 </style>
 </html>
