--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Consulta el estado de tu Reparación<br>
                     <legend><small>Usted aquí puede buscar su Ticket con el número provisto por la companía o también puede buscarse con su número de móvil.</small></legend>
                   </label>
-                  <input type="search" id="searchboxAllRows" placeholder="Nº de Teléfono"/>
+                  <input type="search" id="searchboxAllRows" placeholder="Nº de Teléfono o de Orden"/>
                   <button type="button" id="searchButton">Search</button>
                 </form>
                 <div id="boxSearchResultsQuery" class="flex-column box-search-results">
