busqueda por numero de ID

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
         background: var(--boxColor);
         color: var(--boxTextColor);
         min-height: 300px;
+        
         border-radius: 5px;
         padding: 30px 5px 15px 5px;
-        max-width: 600px;
+        
         min-width: calc(100% - 10vw);
         margin-left: auto;
         position:relative;
@@ -173,6 +174,9 @@
     }
     main{
         padding: 3rem .51vw;
+    }
+    .left-container {
+        max-width: 400px;
     }
     .left-container h1{
         text-align: center;
